--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://SecureByDesign.dk" />
     <meta name="description" content="SecureByDesign" property="og:description">
-
+    <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="SecureByDesign" />
     <meta name="author" content="Christoffer Pedersen" />
     <meta name="application-name" content="SecureByDesignWebsite" />
@@ -27,9 +27,9 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/icons//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/image-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/icons/image-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/image-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
